k8s/ingress/ingress-grafana.yaml
# Use this only if Keycloak is used
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-oauth2-ingress
  namespace: monitoring
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/protocol: "http"
spec:
  ingressClassName: kong
  rules:
    - host: arena.acadnet.eu
      http:
        paths:
        - path: /monitoring/grafana
          pathType: Prefix
          backend:
            service:
              name: kong-gateway-oauth2-proxy
              port:
                number: 4180
        - path: /monitoring/oauth2/callback
          pathType: Exact
          backend:
            service:
              name: kong-gateway-oauth2-proxy
              port:
                number: 4180
