k8s/ingress/ingress-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: monitoring
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/protocol: "http"
spec:
  ingressClassName: kong
  rules:
  - host: arena.acadnet.eu
    http:
      paths:
      - path: /monitoring/keycloak
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8082
