k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    konghq.com/strip-path: 'true'
    konghq.com/protocol: 'http'
spec:
  ingressClassName: kong
  rules:
    - host: arena.acadnet.eu
      http:
        paths:
        - path: /monitoring/prometheus
          pathType: Prefix
          backend:
            service:
              name: prometheus
              port:
                number: 9090
        - path: /monitoring/grafana
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
        - path: /monitoring/keycloak
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8082
